--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 bin/
 obj/
 Properties/
-ImageCompressor.csproj.user.packages
+ImageCompressor.csproj
+ImageCompressor.csproj.user
 App.config
 packages.config
